--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
-<html> 
+<html>
+  <head>
+    <meta charset="utf-8" />
+  </head>
 
-<head>
-    <meta charset=utf-8/>
-</head>
-
-
-<body>
-
+  <body>
     <h1>ic-07 - Intro to JavaScript</h1>
 
-    <button type="button">Button 1</button>
+    <button type="button" onClick="button1Clicked()">Button 1</button>
 
     <div id="random_num">
-        When Button 1 is clicked, a random number should appear here. 
+      When Button 1 is clicked, a random number should appear here.
     </div>
 
-</body>
+    <button type="button" onClick="button2Clicked()">Button 2</button>
 
+    <div>
+      <svg height="100" width="100">
+        <circle
+          id="circle1"
+          cx="50"
+          cy="50"
+          r="40"
+          stroke="black"
+          stroke-width="3"
+          fill="blue"
+        />
+      </svg>
+    </div>
+
+    <script type="text/javascript" src="main.js"></script>
+  </body>
 </html>
